--- a/wp-content/themes/blossom-chic-child/css/editor.css
+++ b/wp-content/themes/blossom-chic-child/css/editor.css
@@ -39,3 +39,14 @@
   height: 24px;
   transition: right ease-in-out 0.25s;
 }
+
+.wp-block-media-text.has-media-on-the-right .wp-block-media-text__content {
+  padding-left: 0;
+}
+.wp-block-media-text.has-media-on-the-left .wp-block-media-text__content {
+  padding-left: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
