--- a/wp-content/plugins/booking/css/calendar.css
+++ b/wp-content/plugins/booking/css/calendar.css
@@ -52,6 +52,14 @@ div.date-content-bottom{
     border: 0 none;
     vertical-align: baseline;    
 }
+.datepick-inline .datepick,                                        /* Month table */
+.datepick-inline .datepick-days-cell,                              /* Date cell */
+.datepick-inline .datepick-days-cell a,                            /* Active date cell */
+.datepick-inline .datepick-days-cell div,                          /* Cehck in/out */
+.datepick-inline .datepick-title-row,                              /* Week row */
+.datepick-inline .datepick-title-row th {                          /* Week cell */
+    line-height: 1.4;
+}
 #content .datepick-days-cell,                                       /* Reset the padding in TD and TH elements of calendar to prevent conflict  with  some WP themes */
 #content .datepick-title-row th{
     padding: 0px;
@@ -534,3 +542,127 @@ div#datepick-div textarea {
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (-webkit-min-device-pixel-ratio: 2) {
 }
 /*******************************************************************************/
+
+
+/*******************************************************************************/
+/*     T I M E   S L O T S        AS       D.O.T.S         //FixIn: 8.9.4.13   */
+/*******************************************************************************/
+.datepick-inline .datepick-days-cell .date-cell-content {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    width: 100%;
+    height: 100%;
+}
+.datepick-inline .datepick-days-cell .date-cell-content .date-content-top,
+.datepick-inline .datepick-days-cell .date-cell-content .date-content-bottom {
+    flex: 1 1 35%;
+    line-height: normal;
+}
+.datepick-inline .datepick-days-cell .date-cell-content a {
+    flex: 1 1 30%;
+}
+.datepick-inline .timespartly .date-content-top{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    overflow: hidden;
+}
+.datepick-inline .timespartly .date-content-top .wpbc_time_dots{
+    flex: 1 1 1px;
+    font-size: 20px;
+
+    position: absolute;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    width: 100%;
+}
+/*******************************************************************************/
+/*  CHECK IN / OUT      as          P.O.L.Y.G.O.N.S        //FixIn: 8.9.4.13   */
+/*******************************************************************************/
+/* Table Day Cell div boundary element */
+.datepick-inline td.datepick-days-cell .wpbc-cell-box {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+.wpbc-cell-box .wpbc-diagonal-el {
+    display: none;                      /* Do not visible by  default ! */
+    position:absolute;                  /* Important to  have parent element with       "position: relative;"     !!! */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+.wpbc-cell-box .wpbc-diagonal-el svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* Show Vertical Lines */
+.wpbc-cell-box .wpbc-diagonal-el svg polygon:nth-child(1){
+    display: none;
+}
+.wpbc-cell-box .wpbc-diagonal-el svg polygon:nth-child(2){
+    display: block;
+}
+/* Show Diagonal Lines */
+.wpbc_change_over_triangle .wpbc-cell-box .wpbc-diagonal-el svg polygon:nth-child(1){
+    display: block;
+}
+.wpbc_change_over_triangle .wpbc-cell-box .wpbc-diagonal-el svg polygon:nth-child(2){
+    display: none;
+}
+/* *** Fill diagonal COLOR for   check in/out items   in calendar skins:    .wpbc-cell-box .wpbc-diagonal-el svg polygon{...}  */
+/* Show CO item only when we are have check  in / out  */
+.datepick-inline td.datepick-days-cell.check_in_time  .wpbc-cell-box .wpbc-diagonal-el,
+.datepick-inline td.datepick-days-cell.check_out_time .wpbc-cell-box .wpbc-diagonal-el {
+    display: block;
+}
+/* Hide Times DOTs, when we are have "check  in / out" Activated  */
+.datepick-inline td.datepick-days-cell.check_in_time  .wpbc-cell-box .date-content-top,
+.datepick-inline td.datepick-days-cell.check_out_time .wpbc-cell-box .date-content-top {
+    visibility: hidden;
+}
+/*  When "C e l l   O V E R"  -- hide diagonal   */
+.datepick-inline .datepick td.datepick-days-cell.datepick-days-cell-over  .wpbc-cell-box .wpbc-diagonal-el{
+    display: none;
+}
+/* S E L E C T E D   Dates */
+.datepick-inline .datepick-one-month .datepick td.datepick-days-cell.datepick-current-day  .wpbc-cell-box .wpbc-diagonal-el{
+    display: none;
+}
+.check-in-div, .check-out-div {
+    display: none !important;
+}
+/********************************************************************************************/
+/* Deprecated !!!! Fix for using OLD check  in/out dates style. We do not recommend use it */
+/********************************************************************************************
+.check-in-div, .check-out-div {
+    display: block !important;
+}
+.datepick-days-cell .wpbc-diagonal-el {
+    display: none !important;
+}
+.wpbc_change_over_triangle .block_hints .block_check_in_out.check_out_time div.check-out-div, .wpbc_change_over_triangle td.timespartly.check_out_time div.check-out-div {
+    transform: rotate(-135deg) translate(-6px,10%);
+}
+.wpbc_change_over_triangle .block_hints .block_check_in_out.check_in_time div.check-in-div, .wpbc_change_over_triangle td.timespartly.check_in_time div.check-in-div {
+    transform: rotate(45deg) translate(-85%,-10%);
+}
+/* In calendar skin CSS file,  comment this lines:
+    .datepick-inline td.datepick-days-cell.check_in_time,
+    .datepick-inline td.datepick-days-cell.check_out_time {
+        ...
+    }
+*/
+/* End Deprecated !!!! Fix for using OLD check  in/out dates style */
+/********************************************************************************************/
