--- a/wp-content/plugins/booking/css/skins/black-2.css
+++ b/wp-content/plugins/booking/css/skins/black-2.css
@@ -18,15 +18,15 @@
 .datepick-inline {
 color:#ffffff;
 background-color:#191919;
-text-transform:uppercase
+text-transform:uppercase;
 background:none;
 border:none;
 box-shadow:none;
 -moz-box-shadow:none;
 -webkit-box-shadow:none;
-border-radius:none;
--moz-border-radius:none;
--webkit-border-radius:none
+border-radius:0;
+-moz-border-radius:0;
+-webkit-border-radius:0;
 }
 /* Background of one calendar month */
 .datepick-inline .datepick{
@@ -107,12 +107,14 @@ text-shadow:none;
     font-weight: 600;
     text-shadow: none;
 }
+.datepick-inline .date_available.datepick-unselectable span{                                                        /*  //FixIn: 8.9.4.13 */
+    text-shadow: none;
+}
 /*******************************************************************************/
-
 /* T I M E   S L O T S */
 .block_hints .block_time,
 .datepick-inline .timespartly{
-  background-image: url("../../assets/img/clock_fill.png");
+  /*background-image: url("../../assets/img/clock_fill.png");*/                                                     /*  //FixIn: 8.9.4.13 */
   background-repeat: no-repeat;
   background-position:100% 100%;
 }
@@ -183,6 +185,7 @@ td.timespartly.check_in_time.check_out_time.check_out_time_date_approved.check_i
   background-color: #05738e;
 }
 /* S E L E C T E D   Dates - Text color */
+.datepick-inline .datepick-one-month .datepick .datepick-current-day .wpbc_time_dots,                               /*  //FixIn: 8.9.4.13 */
 .datepick-inline .datepick-one-month .datepick .datepick-current-day a{
     color: #EEEEEE;
     text-shadow: 0 -1px 0 #000000;
@@ -190,12 +193,14 @@ td.timespartly.check_in_time.check_out_time.check_out_time_date_approved.check_i
 /*******************************************************************************/
 
 /* C e l l   O V E R   Dates - Background */
+.wpbc_timeslot_day_bg_as_available .datepick-inline .times_clock.datepick-days-cell-over,
 .datepick-inline .datepick .datepick-days-cell-over{
     background:#aaa;
 }
 /* C e l l   O V E R   Dates - Text color */
-.datepick-inline .datepick .datepick-days-cell-over a:hover,
-.datepick-inline .datepick .datepick-days-cell-over a{
+.datepick-inline  .datepick-one-month .datepick .datepick-days-cell-over .wpbc_time_dots,                                                /*  //FixIn: 8.9.4.13 */
+.datepick-inline  .datepick-one-month .datepick td.datepick-days-cell-over a:hover,
+.datepick-inline  .datepick-one-month .datepick td.datepick-days-cell-over a{
     color: #eee;
     text-shadow: 0 -1px 0 #888;
 }
@@ -230,5 +235,38 @@ td.timespartly.check_in_time.check_out_time.check_out_time_date2approve.check_in
 /*   Same as in this Section above --- A V A I L A B L E  and UNSELECTABLE - Text */
 .wpbc_timeslot_day_bg_as_available .datepick-inline .date_available {
   color: #CCCCCC;                                                               /* This style for the uvailbale date, when we are select the dates */
-  text-shadow: 0 1px 0 #FFFFFF;                                                 /* This style for the uvailbale date, when we are select the dates */
+  text-shadow: none;                                                 /* This style for the unavailable date, when we are select the dates */
+}
+.datepick-inline .date_available span {
+    text-shadow: none;
+}
+
+/*******************************************************************************/
+/*  CHECK IN / OUT      as          P.O.L.Y.G.O.N.S        //FixIn: 8.9.4.13   */
+/*******************************************************************************/
+/* Fill diagonal check  in/out items with AVAILABLE background color */
+.wpbc-cell-box .wpbc-diagonal-el svg polygon{
+    fill: #191919;
+}
+/* Firstly we define background of the day cells background as available */
+.datepick-inline td.datepick-days-cell.check_in_time,
+.datepick-inline td.datepick-days-cell.check_out_time {
+    background-color: #191919;
+}
+/* Pending */
+.datepick-inline td.datepick-days-cell.check_in_time.check_in_time_date2approve     .wpbc-cell-box .wpbc-co-in svg polygon,     /* Check In  */
+.datepick-inline td.datepick-days-cell.check_out_time.check_out_time_date2approve   .wpbc-cell-box .wpbc-co-out svg polygon     /* Check Out */
+{
+    fill: #DF9A00;
+}
+/* Approved */
+.datepick-inline td.datepick-days-cell.check_in_time.check_in_time_date_approved    .wpbc-cell-box .wpbc-co-in svg polygon,     /* Check In  */
+.datepick-inline td.datepick-days-cell.check_out_time.check_out_time_date_approved  .wpbc-cell-box .wpbc-co-out svg polygon     /* Check Out */
+{
+    fill: #c23b1b;
+}
+/* C e l l   O V E R   Dates */
+.datepick-inline td.datepick-days-cell.check_in_time.datepick-days-cell-over,
+.datepick-inline td.datepick-days-cell.check_out_time.datepick-days-cell-over {
+    background-color: #aaa;
 }
