--- a/wp-content/themes/blossom-chic-child/css/editor.css
+++ b/wp-content/themes/blossom-chic-child/css/editor.css
@@ -1,17 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
 .editor-styles-wrapper a {
   color: #333;
 }
 .editor-styles-wrapper a:hover {
   color: #f69581;
   text-decoration: underline;
-}
-
-.header-m {
-  padding: 0;
-}
-.header-m .custom-logo {
-  max-height: 250px;
-  object-fit: contain;
 }
 
 .wp-block-gallery .wp-card {
@@ -56,11 +49,36 @@
   transition: right ease-in-out 0.25s;
 }
 
+.header-m {
+  padding: 0;
+}
+.header-m .custom-logo {
+  max-height: 250px;
+  object-fit: contain;
+}
+
 .wp-block-media-text.has-media-on-the-right .wp-block-media-text__content {
   padding-left: 0;
 }
 .wp-block-media-text.has-media-on-the-left .wp-block-media-text__content {
   padding-left: 0;
+}
+
+@media (min-width: 1024px) {
+  .main-navigation ul .menu-item .menu-first {
+    font-size: 1.4em;
+    font-weight: 900;
+  }
+  .main-navigation ul .menu-item .menu-rest {
+    color: transparent;
+  }
+  .main-navigation ul .menu-item:hover .menu-rest {
+    color: #f69581;
+  }
+}
+.main-navigation ul .menu-item .sub-menu .menu-item {
+  font-family: "Handlee", cursive;
+  font-size: 1em;
 }
 
 .is-style-quicklinks {
