--- a/wp-content/themes/blossom-chic-child/scss/blocks/_index.scss
+++ b/wp-content/themes/blossom-chic-child/scss/blocks/_index.scss
@@ -1,5 +1,7 @@
 @import "typography";
-@import "header";
+
 @import "card";
+@import "header";
 @import "media-text";
+@import "nav";
 @import "quicklinks";
