--- a/wp-content/themes/blossom-chic-child/css/styles.css
+++ b/wp-content/themes/blossom-chic-child/css/styles.css
@@ -7,6 +7,10 @@
   text-decoration: underline;
 }
 
+.mvvwb_showInline .flatpickr-calendar {
+  margin: 0;
+}
+
 .wp-block-gallery .wp-card {
   overflow: hidden;
   box-shadow: 0.5px 0.5px 10px #333;
@@ -47,6 +51,10 @@
   height: 24px;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23000' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' %3E%3Cline x1='5' y1='12' x2='19' y2='12'/%3E%3Cpolyline points='12 5 19 12 12 19'/%3E%3C/svg%3E");
   transition: right ease-in-out 0.25s;
+}
+
+.mep-events-wrapper .mep-social-share a {
+  background-color: #000000;
 }
 
 .header-m {
