--- a/wp-content/themes/blossom-chic-child/scss/blocks/_typography.scss
+++ b/wp-content/themes/blossom-chic-child/scss/blocks/_typography.scss
@@ -1,4 +1,11 @@
+// styling for wordpress frontend
+.wp-content {
+
+}
+
+// styling for wordpress editor
 .editor-styles-wrapper {
+    // added styling for links
     a {
         color: #333;
 
