--- a/wp-content/themes/blossom-chic-child/scss/blocks/_booking.scss
+++ b/wp-content/themes/blossom-chic-child/scss/blocks/_booking.scss
@@ -1,3 +1,15 @@
 .mvvwb_showInline .flatpickr-calendar {
     margin: 0;
 }
+
+.woocommerce #page .onsale {
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    padding: 0.8em;
+    background-color: #f69581;
+}
+
+.product-meta {
+    display: none;
+}
