--- a/wp-content/themes/blossom-chic-child/scss/blocks/_media-text.scss
+++ b/wp-content/themes/blossom-chic-child/scss/blocks/_media-text.scss
@@ -1,4 +1,4 @@
-// removed margin from media-text
+// removed padding left en right from media-text
 .wp-block-media-text {
     &.has-media-on-the-right {
         .wp-block-media-text__content {
