--- a/wp-content/themes/blossom-chic-child/scss/blocks/_quicklinks.scss
+++ b/wp-content/themes/blossom-chic-child/scss/blocks/_quicklinks.scss
@@ -1,3 +1,8 @@
+// styling for de quicklings styling
+html {
+    scroll-behavior: smooth;
+}
+
 .is-style-quicklinks {
     padding: 0;
     list-style: none;
@@ -12,6 +17,7 @@
             align-items: center;
             text-decoration: none;
     
+            // adding a arrow behind the quicklink
             &::after {
                 content: "";
                 display: block;
