IMP: added comments adn fixed product dates

--- a/wp-content/themes/blossom-chic-child/scss/_fonts.scss
+++ b/wp-content/themes/blossom-chic-child/scss/_fonts.scss
@@ -1,8 +1,9 @@
+// Added font clean Your Mess
 @font-face {
     font-family: 'Clean Up Your Mess';
-    src: url('../../fonts/clean up your mess.ttf');
+    src: url('../fonts/clean up your mess.ttf');
 }
 
-.family-clean-mess {
+.family-clean-your-mess {
     font-family: 'Clean Up Your Mess';
 }
