--- a/wp-content/themes/blossom-chic-child/css/editor.css
+++ b/wp-content/themes/blossom-chic-child/css/editor.css
@@ -1,263 +1,1 @@
-@charset "UTF-8";
-.editor-styles-wrapper a {
-  color: #333;
-}
-.editor-styles-wrapper a:hover {
-  color: #f69581;
-  text-decoration: underline;
-}
-
-.mvvwb_showInline .flatpickr-calendar {
-  margin: 0;
-}
-
-.woocommerce #page .onsale {
-  display: flex;
-  align-items: center;
-  width: fit-content;
-  padding: 0.8em;
-  background-color: #f69581;
-}
-
-.product_meta {
-  display: none;
-}
-
-.single-mep_events .mep-events-wrapper .mep-default-sidrbar-events-schedule h3 svg,
-.single-mep_events .mep-events-wrapper .mep-default-sidrbar-meta svg,
-.single-mep_events .mep-events-wrapper .mep-default-sidrbar-calender-btn svg {
-  margin-right: 10px;
-}
-.single-mep_events .mep-events-wrapper .mep-default-sidrbar-meta::after {
-  content: "Locatie";
-  font-family: "Cormorant", serif;
-  font-size: 16px;
-  font-weight: 600;
-  color: #444444;
-}
-.single-mep_events .mep-events-wrapper .mep-more-date svg {
-  display: none;
-}
-.single-mep_events .mep-events-wrapper .mep-more-date span {
-  line-height: 1.2;
-}
-.single-mep_events .mep-events-wrapper .mep-more-date .mep_date_scdl_start_datetime::before {
-  content: "  ";
-}
-.single-mep_events .mep-events-wrapper .mep-more-date .mep_date_scdl_start_datetime::after {
-  content: "tot";
-  display: block;
-  text-align: center;
-}
-.single-mep_events .mep-events-wrapper .mep-more-date .mep_date_scdl_separator {
-  display: none;
-}
-.single-mep_events .mep-events-wrapper .mep-social-share a {
-  background-color: #0a0404;
-}
-.single-mep_events .mep-events-wrapper .mep-default-feature-cart-sec .mage_input_group {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-right: 0.5em;
-  padding-left: 0.5em;
-}
-
-.header-m {
-  padding: 0;
-}
-.header-m .custom-logo {
-  max-height: 250px;
-  object-fit: contain;
-}
-
-#page .page-title {
-  line-height: 1.2;
-}
-
-.wp-block-media-text.has-media-on-the-right .wp-block-media-text__content {
-  padding-left: 0;
-}
-.wp-block-media-text.has-media-on-the-left .wp-block-media-text__content {
-  padding-left: 0;
-}
-
-@media (min-width: 1024px) {
-  .main-navigation ul .menu-item .menu-first {
-    font-size: 1.4em;
-    font-weight: 900;
-  }
-  .main-navigation ul .menu-item .menu-rest {
-    color: transparent;
-  }
-  .main-navigation ul .menu-item:hover .menu-rest {
-    color: #f69581;
-  }
-}
-.main-navigation ul .menu-item .sub-menu .menu-item {
-  font-family: "Clean Up Your Mess";
-  font-size: 1em;
-  font-weight: 500;
-}
-
-.archive #page .page-title {
-  font-size: 0px;
-}
-.archive #page .page-title span {
-  font-size: 44px;
-}
-.archive #page .products .product h2 {
-  font-size: var(--wp--preset--font-size--large);
-}
-.archive.term-23 .products .product {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-@media (min-width: 768px) {
-  .archive.term-23 .products .product .add_to_cart_button {
-    position: static;
-    display: block;
-    width: fit-content;
-    min-width: 0;
-    margin-left: auto;
-    opacity: 1;
-    transform: translateY(-100%);
-  }
-  .archive.term-23 .products .product .woocommerce-loop-product__link {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: auto auto 1fr;
-    grid-template-areas: "a b" "a c" "a d";
-    text-align: left;
-  }
-  .archive.term-23 .products .product .woocommerce-loop-product__link > *:not(img) {
-    padding-left: 4rem;
-  }
-  .archive.term-23 .products .product .woocommerce-loop-product__link img {
-    grid-area: a;
-    margin: 0;
-  }
-  .archive.term-23 .products .product .woocommerce-loop-product__link h2 {
-    font-size: var(--wp--preset--font-size--large);
-    grid-area: b;
-  }
-  .archive.term-23 .products .product .woocommerce-loop-product__link div[itemprop=description] {
-    grid-area: d;
-    padding-bottom: 3rem;
-    color: #444;
-  }
-  .archive.term-23 .products .product .woocommerce-loop-product__link .price {
-    grid-area: c;
-  }
-  .archive.term-23 .products .product .woocommerce-loop-product__link .price::before {
-    content: "Prijs: ";
-  }
-}
-
-.products .product img {
-  aspect-ratio: 1/1;
-  object-fit: cover;
-  object-position: center;
-}
-
-.page:not(.term-23) #page #primary .so-panel .sow-image-container {
-  margin-bottom: 1em;
-  border: 1px solid #f2f2f2;
-}
-.page:not(.term-23) #page #primary .so-panel .widget-title {
-  margin: 0 0 8px;
-  padding: 0;
-  background-color: transparent;
-  font-size: 32px;
-  font-weight: 300;
-  letter-spacing: normal;
-  text-transform: none;
-}
-.page:not(.term-23) #page #primary .so-panel .widget-title a {
-  text-decoration: none;
-}
-.page:not(.term-23) #page #primary .so-panel .widget-title a:hover {
-  color: #333;
-}
-.page:not(.term-23) #page #primary .so-panel .so-widget-sow-image::after,
-.page:not(.term-23) #page #primary .woocommerce ul.products li.product .add_to_cart_button {
-  content: "Meer informatie";
-  position: static;
-  display: block;
-  width: fit-content;
-  min-width: 0;
-  margin: 0 auto;
-  padding: 0.618em 1em;
-  background-color: #ebe9eb;
-  color: #515151;
-  opacity: 1;
-  font-size: 100%;
-  font-weight: 700;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  cursor: pointer;
-  border-radius: 3px;
-  transform: none;
-  transition: ease 0.2s;
-}
-.page:not(.term-23) #page #primary .so-panel .so-widget-sow-image:hover::after,
-.page:not(.term-23) #page #primary .woocommerce ul.products li.product .add_to_cart_button:hover,
-.page:not(.term-23) #page #primary .product:hover .button {
-  background-color: #dfdcde;
-  color: #f69581;
-}
-.page:not(.term-23) #page #primary .products {
-  display: flex;
-  margin: 0;
-}
-.page:not(.term-23) #page #primary .products .product {
-  float: none;
-  border: none;
-}
-@media (max-width: 768px) {
-  .page:not(.term-23) #page #primary .products .product {
-    width: 100%;
-  }
-}
-.page:not(.term-23) #page #primary .widget ul li:before {
-  content: none;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-.is-style-quicklinks {
-  padding: 0;
-  list-style: none;
-}
-.is-style-quicklinks li:not(:first-child, :last-child) {
-  padding: 0.5em 0;
-}
-.is-style-quicklinks li a {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-}
-.is-style-quicklinks li a::after {
-  content: "";
-  display: block;
-  margin-left: 0.25em;
-  width: 16px;
-  height: 16px;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23000' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' %3E%3Cline x1='5' y1='12' x2='19' y2='12'/%3E%3Cpolyline points='12 5 19 12 12 19'/%3E%3C/svg%3E");
-  transition: margin-left 0.5s;
-}
-.is-style-quicklinks li a:hover::after {
-  margin-left: 0.5rem;
-}
-
-@font-face {
-  font-family: "Clean Up Your Mess";
-  src: url("../../fonts/clean up your mess.ttf");
-}
-.family-clean-mess {
-  font-family: "Clean Up Your Mess";
-}
+@charset "UTF-8";#page h1,#page h2,#page h3,#page h4,#page h5,#page h6{font-family:Clean Up Your Mess;font-weight:700}.editor-styles-wrapper a{color:#333}.editor-styles-wrapper a:hover{color:#f69581;text-decoration:underline}.editor-styles-wrapper h1,.editor-styles-wrapper h2,.editor-styles-wrapper h3,.editor-styles-wrapper h4,.editor-styles-wrapper h5,.editor-styles-wrapper h6{font-family:Clean Up Your Mess;font-weight:700}.woocommerce #page .onsale{display:flex;align-items:center;width:fit-content;padding:.8em;background-color:#f69581}#page .site-footer .site-info .container{font-size:0}#page .site-footer .site-info .container :after,#page .site-footer .site-info .container :before,#page .site-footer .site-info .container a{font-size:14px}#page .site-footer .site-info .container .copyright:before{content:"2022 Copyright "}#page .site-footer .site-info .container .copyright:after{content:". Blossom Chic | Ontwikkeld door "}#page .site-footer .site-info .container>a:last-child:before{content:". Mogelijk gemaakt door "}#page .site-footer .site-info .container>a:last-child:after{content:"."}.single-mep_events .mep-events-wrapper .mep-default-sidrbar-calender-btn svg,.single-mep_events .mep-events-wrapper .mep-default-sidrbar-events-schedule h3 svg,.single-mep_events .mep-events-wrapper .mep-default-sidrbar-meta svg{margin-right:10px}.single-mep_events .mep-events-wrapper .mep-default-sidrbar-meta:after{content:"Locatie";font-family:Cormorant,serif;font-size:16px;font-weight:600;color:#444}.single-mep_events .mep-events-wrapper .mep-more-date svg{display:none}.single-mep_events .mep-events-wrapper .mep-more-date span{line-height:1.2}.single-mep_events .mep-events-wrapper .mep-more-date .mep_date_scdl_start_datetime:before{content:"  "}.single-mep_events .mep-events-wrapper .mep-more-date .mep_date_scdl_start_datetime:after{content:"tot";display:block;text-align:center}.single-mep_events .mep-events-wrapper .mep-more-date .mep_date_scdl_separator{display:none}.single-mep_events .mep-events-wrapper .mep-social-share a{background-color:#0a0404}.single-mep_events .mep-events-wrapper .mep-default-feature-cart-sec .mage_input_group{display:flex;justify-content:space-between;align-items:center;padding-right:.5em;padding-left:.5em}.header-m{padding:0}.header-m .custom-logo{max-height:250px;object-fit:contain}#page .page-title{line-height:1.2}.wp-block-media-text.has-media-on-the-left .wp-block-media-text__content,.wp-block-media-text.has-media-on-the-right .wp-block-media-text__content{padding-left:0}@media (min-width:1024px){.main-navigation ul .menu-item .menu-first{font-size:1.4em;font-weight:900}.main-navigation ul .menu-item .menu-rest{color:transparent}.main-navigation ul .menu-item:hover .menu-rest{color:#f69581}}.main-navigation ul .menu-item .sub-menu .menu-item{font-family:Clean Up Your Mess;font-size:1em}.archive #page .page-title{font-size:0}.archive #page .page-title span{font-size:44px}.archive #page .products .product h2{font-size:var(--wp--preset--font-size--large)}.archive.term-23 .products .product{width:100%;margin:0;padding:0}@media (min-width:768px){.archive.term-23 .products .product .add_to_cart_button{position:static;display:block;width:fit-content;min-width:0;margin-left:auto;opacity:1;transform:translateY(-100%)}.archive.term-23 .products .product .woocommerce-loop-product__link{display:grid;grid-template-columns:1fr 2fr;grid-template-rows:auto auto 1fr;grid-template-areas:"a b" "a c" "a d";text-align:left}.archive.term-23 .products .product .woocommerce-loop-product__link>:not(img){padding-left:4rem}.archive.term-23 .products .product .woocommerce-loop-product__link img{grid-area:a;margin:0}.archive.term-23 .products .product .woocommerce-loop-product__link h2{font-size:var(--wp--preset--font-size--large);grid-area:b}.archive.term-23 .products .product .woocommerce-loop-product__link div[itemprop=description]{grid-area:d;padding-bottom:3rem;color:#444}.archive.term-23 .products .product .woocommerce-loop-product__link .price{grid-area:c}.archive.term-23 .products .product .woocommerce-loop-product__link .price:before{content:"Prijs: "}}.products .product img{aspect-ratio:1/1;object-fit:cover;object-position:center}.page:not(.term-23) #page #primary .so-panel .sow-image-container{margin-bottom:1em;border:1px solid #f2f2f2}.page:not(.term-23) #page #primary .so-panel .widget-title{margin:0 0 8px;padding:0;background-color:transparent;font-size:32px;font-weight:300;letter-spacing:normal;text-transform:none}.page:not(.term-23) #page #primary .so-panel .widget-title a{text-decoration:none}.page:not(.term-23) #page #primary .so-panel .widget-title a:hover{color:#333}.page:not(.term-23) #page #primary .so-panel .so-widget-sow-image:after,.page:not(.term-23) #page #primary .woocommerce ul.products li.product .add_to_cart_button{content:"Meer informatie";position:static;display:block;width:fit-content;min-width:0;margin:0 auto;padding:.618em 1em;background-color:#ebe9eb;color:#515151;opacity:1;font-size:100%;font-weight:700;line-height:1;letter-spacing:normal;text-transform:none;cursor:pointer;border-radius:3px;transform:none;transition:.2s ease}.page:not(.term-23) #page #primary .product:hover .button,.page:not(.term-23) #page #primary .so-panel .so-widget-sow-image:hover:after,.page:not(.term-23) #page #primary .woocommerce ul.products li.product .add_to_cart_button:hover{background-color:#dfdcde;color:#f69581}.page:not(.term-23) #page #primary .products{display:flex;margin:0}.page:not(.term-23) #page #primary .products .product{float:none;border:none}@media (max-width:768px){.page:not(.term-23) #page #primary .products .product{width:100%}}.page:not(.term-23) #page #primary .widget ul li:before{content:none}html{scroll-behavior:smooth}.is-style-quicklinks{padding:0;list-style:none}.is-style-quicklinks li:not(:first-child,:last-child){padding:.5em 0}.is-style-quicklinks li a{display:flex;align-items:center;text-decoration:none}.is-style-quicklinks li a:after{content:"";display:block;margin-left:.25em;width:16px;height:16px;background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23000' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M5 12h14M12 5l7 7-7 7'/%3E%3C/svg%3E");transition:margin-left .5s}.is-style-quicklinks li a:hover:after{margin-left:.5rem}#page .product_meta{display:none}#page .mvvwb_showInline .flatpickr-calendar{margin:0}.single-product #page .product{display:flex;justify-content:space-between;flex-wrap:wrap}.single-product #page .product .woocommerce-Tabs-panel--description{order:0;margin-top:0}.single-product #page .product .woocommerce-product-gallery{order:1;margin-top:1.5em}.single-product #page .product .summary{order:2;margin-top:1.5em}.single-product #page .product .summary .woocommerce-product-details__short-description{display:none}.single-product #page .product .summary .flatpickr-calendar .flatpickr-day.endRange,.single-product #page .product .summary .flatpickr-calendar .flatpickr-day.selected,.single-product #page .product .summary .flatpickr-calendar .flatpickr-day.startRange{background-color:#f69581;border-color:#f69581}.single-product #page .product .summary .flatpickr-calendar .flatpickr-day.endRange.startRange+.endRange:not(:nth-child(7n+1)),.single-product #page .product .summary .flatpickr-calendar .flatpickr-day.selected.startRange+.endRange:not(:nth-child(7n+1)),.single-product #page .product .summary .flatpickr-calendar .flatpickr-day.startRange+.endRange:not(:nth-child(7n+1)){box-shadow:-10px 0 0 #f69581}.single-product #page .product .summary .mvvwb_summary .mvvwb_booking_date{font-size:0;color:#f69581}.single-product #page .product .woocommerce-Tabs-panel--reviews{order:3}.single-product #page .product .woocommerce-Tabs-panel--reviews .comment-reply-title{font-family:Clean Up Your Mess;font-weight:700}.single-product #page .product .related.products{order:4}@font-face{font-family:Clean Up Your Mess;src:url("../fonts/clean up your mess.ttf")}.family-clean-your-mess{font-family:Clean Up Your Mess}
