--- a/wp-content/themes/blossom-chic-child/scss/blocks/_index.scss
+++ b/wp-content/themes/blossom-chic-child/scss/blocks/_index.scss
@@ -1,9 +1,11 @@
 @import "typography";
 
 @import "booking";
+@import "copyright";
 @import "events";
 @import "header";
 @import "media-text";
 @import "nav";
 @import "product-category";
 @import "quicklinks";
+@import "single-product";
