--- a/wp-content/themes/blossom-chic-child/scss/blocks/_typography.scss
+++ b/wp-content/themes/blossom-chic-child/scss/blocks/_typography.scss
@@ -1,6 +1,9 @@
 // styling for wordpress frontend
-.wp-content {
-
+#page {
+    h1, h2, h3, h4, h5, h6 {
+        font-family: "Clean Up Your Mess";
+        font-weight: 700;
+    }
 }
 
 // styling for wordpress editor
@@ -13,5 +16,10 @@
             color: #f69581;
             text-decoration: underline;
         }
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        font-family: "Clean Up Your Mess";
+        font-weight: 700;
     }
 }
